add about and contact page

--- a/src/output.css
+++ b/src/output.css
@@ -1088,6 +1088,10 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 1.5rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1668,6 +1672,11 @@ input[type="range"]::-ms-fill-lower {
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
