--- a/src/output.css
+++ b/src/output.css
@@ -945,10 +945,6 @@ input[type="range"]::-ms-fill-lower {
   bottom: 1.25rem;
 }
 
-.bottom-\[50\%\] {
-  bottom: 50%;
-}
-
 .end-0 {
   inset-inline-end: 0px;
 }
@@ -993,10 +989,6 @@ input[type="range"]::-ms-fill-lower {
   z-index: 50;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .m-4 {
   margin: 1rem;
 }
@@ -1009,6 +1001,11 @@ input[type="range"]::-ms-fill-lower {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mb-16 {
@@ -1135,8 +1132,8 @@ input[type="range"]::-ms-fill-lower {
   height: 35px;
 }
 
-.h-\[40rem\] {
-  height: 40rem;
+.h-\[50vh\] {
+  height: 50vh;
 }
 
 .h-\[80px\] {
@@ -1153,18 +1150,6 @@ input[type="range"]::-ms-fill-lower {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[50vh\] {
-  height: 50vh;
 }
 
 .w-1\/2 {
@@ -1234,6 +1219,11 @@ input[type="range"]::-ms-fill-lower {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0 {
+  --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1335,10 +1325,6 @@ input[type="range"]::-ms-fill-lower {
   border-radius: 0.25rem;
 }
 
-.rounded-\[10px\] {
-  border-radius: 10px;
-}
-
 .rounded-\[5px\] {
   border-radius: 5px;
 }
@@ -1353,10 +1339,6 @@ input[type="range"]::-ms-fill-lower {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-\[20px\] {
-  border-radius: 20px;
 }
 
 .rounded-e-lg {
@@ -1400,11 +1382,6 @@ input[type="range"]::-ms-fill-lower {
   border-bottom-width: 1px;
 }
 
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(63 131 248 / var(--tw-border-opacity));
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1423,6 +1400,11 @@ input[type="range"]::-ms-fill-lower {
 .border-secondary-color {
   --tw-border-opacity: 1;
   border-color: rgb(244 63 94 / var(--tw-border-opacity));
+}
+
+.bg-accent-color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-accent-color\/90 {
@@ -1454,11 +1436,6 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-on-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-primary-color {
   --tw-bg-opacity: 1;
   background-color: rgb(24 164 228 / var(--tw-bg-opacity));
@@ -1472,11 +1449,6 @@ input[type="range"]::-ms-fill-lower {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1500,10 +1472,6 @@ input[type="range"]::-ms-fill-lower {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .p-4 {
@@ -1756,6 +1724,18 @@ input[type="range"]::-ms-fill-lower {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-700 {
   transition-duration: 700ms;
 }
@@ -1780,6 +1760,10 @@ input[type="range"]::-ms-fill-lower {
   cursor: pointer;
 }
 
+.hover\:border:hover {
+  border-width: 1px;
+}
+
 .hover\:border-none:hover {
   border-style: none;
 }
@@ -1787,6 +1771,11 @@ input[type="range"]::-ms-fill-lower {
 .hover\:border-secondary-hover:hover {
   --tw-border-opacity: 1;
   border-color: rgb(213 29 69 / var(--tw-border-opacity));
+}
+
+.hover\:border-secondary-color:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 63 94 / var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-100:hover {
@@ -1797,6 +1786,21 @@ input[type="range"]::-ms-fill-lower {
 .hover\:bg-primary-hover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(20 136 188 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-secondary-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(213 29 69 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary-color:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 164 228 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-secondary-color:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 63 94 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -1814,12 +1818,30 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(20 136 188 / var(--tw-text-opacity));
 }
 
+.hover\:text-on-primary:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
 
-.hover\:opacity-70:hover {
-  opacity: 0.7;
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
+}
+
+.hover\:opacity-85:hover {
+  opacity: 0.85;
 }
 
 .hover\:outline-none:hover {
@@ -1975,10 +1997,6 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:h-\[500px\] {
     height: 500px;
-  }
-
-  .md\:h-\[60\%\] {
-    height: 60%;
   }
 
   .md\:h-\[60vh\] {
